# 004_srt

./: .gitignore  README.md  example.srt  pyproject.toml  run.bat  test.bat  transcribe.py
.claude/: settings.local.json
